--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "rl-react-scripts",
-  "version": "0.1.0",
-  "description":
-    "Configuration and scripts for Create React App. customised for Rocket LAb",
+  "version": "0.1.1",
+  "description": "Configuration and scripts for Create React App. customised for Rocket LAb",
   "repository": "GethylRocketLab/rl-react-scripts",
   "license": "MIT",
   "engines": {
@@ -11,7 +10,13 @@
   "bugs": {
     "url": "https://github.com/GethylRocketLab/rl-react-scripts/issues"
   },
-  "files": ["bin", "config", "scripts", "template", "utils"],
+  "files": [
+    "bin",
+    "config",
+    "scripts",
+    "template",
+    "utils"
+  ],
   "bin": {
     "react-scripts": "./bin/react-scripts.js"
   },
