--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rl-react-scripts",
   "version": "0.1.1",
-  "description": "Configuration and scripts for Create React App. customised for Rocket LAb",
+  "description":
+    "Configuration and scripts for Create React App. customised for Rocket LAb",
   "repository": "GethylRocketLab/rl-react-scripts",
   "license": "MIT",
   "engines": {
@@ -10,15 +11,9 @@
   "bugs": {
     "url": "https://github.com/GethylRocketLab/rl-react-scripts/issues"
   },
-  "files": [
-    "bin",
-    "config",
-    "scripts",
-    "template",
-    "utils"
-  ],
+  "files": ["bin", "config", "scripts", "template", "utils"],
   "bin": {
-    "react-scripts": "./bin/react-scripts.js"
+    "rl-react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
